test/libyul/yulSyntaxTests/eof/datasize_shadowing.yul
{
    function datasize(a) -> b {}
}
// ====
// bytecodeFormat: >=EOFv1
// ----
// DeclarationError 5017: (6-34): The identifier "datasize" is reserved and can not be used.
